sockshop-project/kubern8s/eks-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sock-ingress
  namespace: sock-shop
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod 
spec:
  ingressClassName: nginx
  rules:
    - host: victoriao.me
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: front-end
                port:
                  number: 80

    - host: prometheus.victoriao.me
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: prometheus-operated
                port:
                  number: 9090  

    - host: grafana.victoriao.me
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: prometheus-grafana
                port:
                  number: 80

    - host: alertmanager.victoriao.me
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: alertmanager-operated
                port:
                  number: 9093                                        
  tls:
    - hosts:
        - victoriao.me
        - grafana.victoriao.me
        - prometheus.victoriao.me
        - alertmanager.victoriao.me

      secretName: sockshop-ingress-cert # cert-manager will store the certificate in this secret
